--- a/.config/powerline/config_files/config.json
+++ b/.config/powerline/config_files/config.json
@@ -26,7 +26,7 @@
 		},
 		"tmux": {
 			"colorscheme": "default",
-			"theme": "default"
+			"theme": "custom"
 		},
 		"vim": {
 			"colorscheme": "default",
