--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 
-source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+source '.config/powerline/bindings/tmux/powerline.conf'
 
 set -g mouse on
 
