--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,11 @@ source 'powerline.conf'
 
 set -g mouse on
 
+set -g status on
+set -g status-utf8 on
+set-option -g status-utf8 on
+
+
 # set Ctrl-a as the default prefix key combination
 # and unbind C-b to free it up
 set -g prefix C-a
