--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+# fix clipboard for tmux
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 source "${HOME}/powerline.conf"
 
@@ -5,13 +7,12 @@ set -g mouse on
 
 set -g status on
 
-# set Ctrl-a as the default prefix key combination
-# and unbind C-b to free it up
-set -g prefix C-a
-# unbind C-b
+bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
+bind c new-window -c '#{pane_current_path}' # Create new window
 
-# use PREFIX | to split window horizontally and PREFIX - to split vertically
-bind | split-window -h
-bind - split-window -v
+# set Ctrl-a as the prefix key combination
+set -g prefix C-a
+
 
 set -g status-left '#(rainbarf --rgb --width=20)'
