--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-# fix clipboard for tmux
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# fix clipboard + other tools for tmux
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
 
 source "${HOME}/powerline.conf"
 
