rainbarf removed. Too much in bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,4 +15,4 @@ bind c new-window -c '#{pane_current_path}' # Create new window
 set -g prefix C-a
 
 
-set -g status-left '#(rainbarf --rgb --width=20)'
+#set -g status-left '#(rainbarf --rgb --width=20)'
