added 80 char guide to vimrc and slight tmux conf edits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-# fix clipboard + other tools for tmux
-if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
+# fix clipboard + other tools for tmux on Mac OS (must install reattach to user namespace)
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $(echo $SHELL)"'
 
 source "${HOME}/powerline.conf"
 
@@ -7,12 +7,18 @@ set -g mouse on
 
 set -g status on
 
-bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind '"' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind '|' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
 
-# set Ctrl-a as the prefix key combination
+# set key as the prefix key combination
 set -g prefix C-a
 
 
-#set -g status-left '#(rainbarf --rgb --width=20)'
+# set blue border for active pane
+set-option -g pane-active-border-fg blue
+
+bind-key S choose-window 'join-pane -v -s "%%"'
+bind-key V choose-window 'join-pane -h -s "%%"'
+
