--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,13 @@ if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reat
 source "${HOME}/powerline.conf"
 
 set -g mouse on
+# fix mouse scrolling
+bind -n WheelUpPane if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+        'send -Mt=' 'if-shell -Ft= "#{alternate_on}" \
+        "send -t= Up" "copy-mode -et="'
+bind -n WheelDownPane if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+        'send -Mt=' 'if-shell -Ft= "#{alternate_on}" \
+        "send -t= Down" "send -Mt="'
 
 set -g status on
 
