--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ bind c new-window -c '#{pane_current_path}' # Create new window
 set -g prefix C-a
 
 
-# set blue border for active pane
+# set border color for active pane
 set-option -g pane-active-border-fg blue
 
 bind-key S choose-window 'join-pane -v -s "%%"'
