--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 # fix clipboard + other tools for tmux on Mac OS (must install reattach to user namespace)
+set -g default-shell $SHELL
 if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $(echo $SHELL)"'
 
 source "${HOME}/powerline.conf"
@@ -29,3 +30,5 @@ set-option -g pane-active-border-fg blue
 bind-key S choose-window 'join-pane -v -s "%%"'
 bind-key V choose-window 'join-pane -h -s "%%"'
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
