add mem usage to powerline and better man

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,12 @@ bind '|' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
 
+# bind ctrl-arrows for fast resizing (can hold arrow keys too)
+bind-key -n C-Up resize-pane -U 1
+bind-key -n C-Down resize-pane -D 1
+bind-key -n C-Left resize-pane -L 1
+bind-key -n C-Right resize-pane -R 1
+
 # set key as the prefix key combination
 set -g prefix C-a
 
@@ -32,3 +38,7 @@ bind-key V choose-window 'join-pane -h -s "%%"'
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
+
+# Watch for activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
