--- a/.ohmyzshrc
+++ b/.ohmyzshrc
@@ -22,12 +22,11 @@ ZSH_CUSTOM=$ZSH/custom
 
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
-plugins=(git sublime git-prompt)
-. $ZSH/plugins/z/z.sh
-
+plugins=(git sublime)
 
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
+. $ZSH/plugins/z/z.sh
 # set custom git prompt
 #. $ZSH_CUSTOM/plugins/zsh-git-prompt/zshrc.sh
 if ! (( ${+functions[_zsh_highlight]} )); then
