added some stuff

--- a/.ohmyzshrc
+++ b/.ohmyzshrc
@@ -22,7 +22,7 @@ ZSH_CUSTOM=$ZSH/custom
 
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
-plugins=(git sublime brew)
+plugins=(git sublime brew colorize)
 
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
