--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,8 @@ bind -n WheelDownPane if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
 
 set -g status on
 
+set-option -g history-limit 10000 # extended pane histories
+
 bind '|' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
