--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # fix clipboard + other tools for tmux on Mac OS (must install reattach to user namespace)
 #set -g default-shell $SHELL
-if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $(echo $SHELL)"'
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
 source "${HOME}/powerline.conf"
 
