--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,17 +21,17 @@ bind '|' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
 
-# bind ctrl-arrows for fast resizing (can hold arrow keys too)
-bind-key -n C-Up resize-pane -U 1
-bind-key -n C-Down resize-pane -D 1
-bind-key -n C-Left resize-pane -L 1
-bind-key -n C-Right resize-pane -R 1
+# bind ctrl-shift-arrows for fast resizing (can hold arrow keys too)
+bind-key -n C-S-Up resize-pane -U 1
+bind-key -n C-S-Down resize-pane -D 1
+bind-key -n C-S-Left resize-pane -L 1
+bind-key -n C-S-Right resize-pane -R 1
 
 # smart pane switching with awareness of vim splits
-# bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-Left) || tmux select-pane -L"
-# bind -n C-Down run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-Down) || tmux select-pane -D"
-# bind -n C-Up run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-Up) || tmux select-pane -U"
-# bind -n C-Right run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-Right) || tmux select-pane -R"
+bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-Down run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-Up run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-Right run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
