fixed osx setup script, readded pub ip to powerline, added load tag alias, changed key mappings for tmux and vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,10 +22,10 @@ bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
 
 # bind ctrl-shift-arrows for fast resizing (can hold arrow keys too)
-bind-key -n C-S-Up resize-pane -U 1
-bind-key -n C-S-Down resize-pane -D 1
-bind-key -n C-S-Left resize-pane -L 1
-bind-key -n C-S-Right resize-pane -R 1
+bind-key -n S-Up resize-pane -U 1
+bind-key -n S-Down resize-pane -D 1
+bind-key -n S-Left resize-pane -L 1
+bind-key -n S-Right resize-pane -R 1
 
 # smart pane switching with awareness of vim splits
 bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
