--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,11 +21,15 @@ bind '|' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
 
-# bind ctrl-shift-arrows for fast resizing (can hold arrow keys too)
-bind-key -n S-Up resize-pane -U 1
-bind-key -n S-Down resize-pane -D 1
-bind-key -n S-Left resize-pane -L 1
-bind-key -n S-Right resize-pane -R 1
+# bindfor fast resizing (can hold arrow keys too)
+bind -n C-S-Up resize-pane -U 1
+bind -n C-S-Down resize-pane -D 1
+bind -n C-S-Left resize-pane -L 1
+bind -n C-S-Right resize-pane -R 1
+# bind -n C-S-k resize-pane -U 1
+# bind -n C-S-j resize-pane -D 1
+# bind -n C-S-h resize-pane -L 1
+# bind -n C-S-l resize-pane -R 1
 
 # smart pane switching with awareness of vim splits
 bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
