--- a/.ohmyzshrc
+++ b/.ohmyzshrc
@@ -22,16 +22,18 @@ ZSH_CUSTOM=$ZSH/custom
 
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
-plugins=(git sublime brew colorize)
+plugins=(git sublime brew colorize z)
 
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
-. $ZSH/plugins/z/z.sh
+# . $ZSH/plugins/z/z.sh
 # set custom git prompt
+
+# These plugins must be loaded manually
 . $ZSH_CUSTOM/plugins/zsh-git-prompt/zshrc.sh
 if ! (( ${+functions[_zsh_highlight]} )); then
-    . "$ZSH_CUSTOM/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh"
-    . "$ZSH_CUSTOM/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh"
+    . $ZSH_CUSTOM/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+    . $ZSH_CUSTOM/plugins/fast-syntax-highlighting/fast-syntax-highlighting.plugin.zsh
 fi
 
 
