fixed recursive links, added tab completion module from prezto

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,10 +26,10 @@ bind -n C-S-Up resize-pane -U 1
 bind -n C-S-Down resize-pane -D 1
 bind -n C-S-Left resize-pane -L 1
 bind -n C-S-Right resize-pane -R 1
-# bind -n C-S-k resize-pane -U 1
-# bind -n C-S-j resize-pane -D 1
-# bind -n C-S-h resize-pane -L 1
-# bind -n C-S-l resize-pane -R 1
+# bind -n C-S-K resize-pane -U 1
+# bind -n C-S-J resize-pane -D 1
+# bind -n C-S-H resize-pane -L 1
+# bind -n C-S-L resize-pane -R 1
 
 # smart pane switching with awareness of vim splits
 bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -49,8 +49,8 @@ set -g prefix C-a
 # set border color for active pane
 set-option -g pane-active-border-fg blue
 
-bind-key S choose-window 'join-pane -v -s "%%"'
-bind-key V choose-window 'join-pane -h -s "%%"'
+bind S choose-window 'join-pane -v -s "%%"'
+bind V choose-window 'join-pane -h -s "%%"'
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
