--- a/.ohmyzshrc
+++ b/.ohmyzshrc
@@ -23,13 +23,13 @@ ZSH_CUSTOM=$ZSH/custom
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 plugins=(git sublime brew colorize z)
-
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
 # . $ZSH/plugins/z/z.sh
 # set custom git prompt
 
 # These plugins must be loaded manually
+. $ZSH_CUSTOM/plugins/tab-completion/tab-completion.sh
 . $ZSH_CUSTOM/plugins/zsh-git-prompt/zshrc.sh
 if ! (( ${+functions[_zsh_highlight]} )); then
     . $ZSH_CUSTOM/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
