--- a/.ohmyzshrc
+++ b/.ohmyzshrc
@@ -22,7 +22,18 @@ ZSH_CUSTOM=$ZSH/custom
 
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
-plugins=(git sublime brew colorize z zsh-autosuggestions)
+plugins=(
+    git
+    git-extras
+    sublime
+    brew
+    colorize
+    z
+    zsh-autosuggestions
+    fasd
+    autojump
+    command-not-found
+)
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
 # . $ZSH/plugins/z/z.sh
