--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,16 @@
+# Tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+
+
 # fix clipboard + other tools for tmux on Mac OS (must install reattach to user namespace)
 #set -g default-shell $SHELL
 if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
@@ -58,3 +71,9 @@ setw -g mode-keys vi
 # Watch for activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
+
+
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
