save before edits to speed up vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,8 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 
 # set key as the prefix key combination
 set -g prefix C-a
-
+# bind C-b to previous window
+bind b previous-window
 
 # set border color for active pane
 set-option -g pane-active-border-fg blue
