tmux conf now finds powerline conf itself

--- a/src_files/.ohmyzshrc
+++ b/src_files/.ohmyzshrc
@@ -27,9 +27,8 @@ plugins=(
     git-extras
     z
     zsh-autosuggestions
-    # zsh-syntax-highlighting
     history-substring-search
-    zsh-trprompt
+    zsh-syntax-highlighting
 )
 # load oh-my-zsh
  . $ZSH/oh-my-zsh.sh
