--- a/src_files/.tmux.conf
+++ b/src_files/.tmux.conf
@@ -1,22 +1,7 @@
-# Tmux plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @continuum-restore 'on'
-# set -g @plugin 'tmux-plugins/tmux-sidebar'
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-
-
 # fix clipboard + other tools for tmux on Mac OS (must install reattach to user namespace)
-#set -g default-shell $SHELL
 if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
-source "${HOME}/powerline.conf"
+run-shell "tmux source-file $(python -m site --user-site)/powerline/bindings/tmux/powerline.conf"
 
 set -g mouse on
 # fix mouse scrolling
@@ -70,8 +55,8 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 set -g visual-activity on
 
-
-
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
+# Tell tmux that Prefix+a should send the prefix key to the program running in
+# the current pane.
+# Useful since Ctrl+a usually jumps to beginning of line but we remapped that
+# key. Now you can press `<prefix> + a` to do so.
+bind a send-prefix
