--- a/src_files/.tmux.conf
+++ b/src_files/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-terminal "xterm-256color"
 # fix clipboard + other tools for tmux on Mac OS (must install reattach to user namespace)
 if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
@@ -60,3 +61,17 @@ set -g visual-activity on
 # Useful since Ctrl+a usually jumps to beginning of line but we remapped that
 # key. Now you can press `<prefix> + a` to do so.
 bind a send-prefix
+
+# set window names to blank
+set-option -g status-interval 1
+set-window-option -g automatic-rename on
+set-option -g automatic-rename-format ''
+set-option -g allow-rename off
+
+# set pane border formats
+set -wg pane-border-status top
+set -g pane-border-fg '#4d5057'
+set -wg pane-border-format "#[bold]#{pane_current_command}:#(\
+echo -n #{pane_current_command} | grep ^ssh &> /dev/null && echo [ssh] || \
+echo -n #{pane_current_path} | sed 's;#{HOME};~;' | \
+)"
