--- a/src_files/.ohmyzshrc
+++ b/src_files/.ohmyzshrc
@@ -24,12 +24,10 @@ ZSH_CUSTOM=$ZSH/custom
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 plugins=(
     autojump
+    # fast-syntax-highlighting
     git
     git-extras
     zsh-autosuggestions
-    history-substring-search
-    zsh-syntax-highlighting
-    z
 )
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
@@ -45,7 +43,7 @@ plugins=(
 
 # These plugins must be loaded manually
 # . $ZSH_CUSTOM/plugins/tab-completion/tab-completion.sh
-. $ZSH_CUSTOM/plugins/zsh-git-prompt/zshrc.sh
+# . $ZSH_CUSTOM/plugins/zsh-git-prompt/zshrc.sh
 set ZSH_THEME_GIT_PROMPT_CACHE
 
 #source ~/.dotfiles/zsh-trprompt/trprompt.plugin.zsh
