--- a/src_files/.tmux.conf
+++ b/src_files/.tmux.conf
@@ -34,7 +34,7 @@ bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -i
 bind -n C-Down run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-Up run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-Right run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # set key as the prefix key combination
 set -g prefix C-a
@@ -104,11 +104,11 @@ set -g status-left "\
 set -g status-right "\
 #[default,fg=$TM_RIGHT_BG,bold] \
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
-#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] #(prodcertstatus --nobinarylog --disable_log_to_disk 2>&1)\
-#[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
 #[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] #(date +'%a %b %e, %l:%M %p' | sed 's/  / /g')\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
 #[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] #(tmux ls | awk -F: '{print $1}' | tr '\n' ',' | sed 's/,\$//g')\
+#[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
+#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] #(zsh ~/.dotfiles/tmux_scripts/bat.sh)\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
 "
 
