local updates save

--- a/src_files/.tmux.conf
+++ b/src_files/.tmux.conf
@@ -28,6 +28,7 @@ bind-key -T root WheelDownPane \
     'send -Mt=' \
     'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
       "send -t= Down" "send -Mt="'
+bind-key / copy-mode \; send-key ?
 
 # smart pane switching with awareness of vim splits
 bind -n C-Left run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -81,12 +82,10 @@ set-option -g pane-active-border-style fg=$TM_BORDER_ACTIVE
 set -g pane-border-style fg=$TM_BORDER_INACTIVE
 set -g pane-border-format '\
 #[bold] \
-#(zsh ~/.dotfiles/tmux_scripts/vcs.sh "#{pane_current_path}")\
-  \
 #(zsh ~/.dotfiles/tmux_scripts/path.sh "#{pane_current_path}")\
   \
-#{pane_current_command} \
-'
+#(zsh ~/.dotfiles/tmux_scripts/repo_url.sh "#{pane_current_path}")\
+ '
 # # The statusbar {
 set -g status-interval 1
 set -g status-left-length 1000
