--- a/src_files/.ohmyzshrc
+++ b/src_files/.ohmyzshrc
@@ -24,12 +24,14 @@ DISABLE_AUTO_TITLE="true"
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 plugins=(
-    autojump
+    # autojump
     fast-syntax-highlighting
-    mercurial
+    # mercurial
     # git
     # git-extras
     zsh-autosuggestions
+    # git-prompt
+    # history-substring-search
 )
 # load oh-my-zsh
 . $ZSH/oh-my-zsh.sh
@@ -46,7 +48,7 @@ plugins=(
 # These plugins must be loaded manually
 # . $ZSH_CUSTOM/plugins/tab-completion/tab-completion.sh
 # . $ZSH_CUSTOM/plugins/zsh-git-prompt/zshrc.sh
-set ZSH_THEME_GIT_PROMPT_CACHE
+# set ZSH_THEME_GIT_PROMPT_CACHE
 
 #source ~/.dotfiles/zsh-trprompt/trprompt.plugin.zsh
 ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE='fg=6'
