--- a/src_files/.tmux.conf
+++ b/src_files/.tmux.conf
@@ -131,12 +131,12 @@ set -g status-right "\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
 #[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] Cluster: #(kubectl config current-context | sed 's/^gke_//g' | sed 's/_.*_/:/g')\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
-#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] V2: M #(zsh ~/per_min.sh solana balance ~/switchboard_environments_v2/mainnet/upgrade_authority/upgrade_authority.json -u mainnet-beta | grep -oE "[0-9]*[\.][0-9]") D #(zsh ~/per_min.sh solana balance ~/switchboard_environments_v2/devnet/upgrade_authority/upgrade_authority.json -u https://switchboard.devnet.rpcpool.com/f9fe774d81ba4527a418f5b19477| grep -oE "[0-9]*[\.][0-9]")\
+#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] V2: M #(solana balance ~/switchboard_environments_v2/mainnet/upgrade_authority/upgrade_authority.json -u mainnet-beta | grep -oE "[0-9]*[\.][0-9]") D #(zsh ~/per_min.sh solana balance ~/switchboard_environments_v2/devnet/upgrade_authority/upgrade_authority.json -u https://switchboard.devnet.rpcpool.com/f9fe774d81ba4527a418f5b19477| grep -oE "[0-9]*[\.][0-9]")\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
-#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] V2 wSOL: M #(zsh ~/per_min.sh spl-token account-info  So11111111111111111111111111111111111111112 ~/switchboard_environments_v2/mainnet/upgrade_authority/upgrade_authority.json -v -u mainnet-beta | grep "Balance" | sed 's/.* //g' | grep -oE "[0-9]*[\.][0-9]") \
+#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] V2 wSOL: M #(spl-token account-info  So11111111111111111111111111111111111111112 ~/switchboard_environments_v2/mainnet/upgrade_authority/upgrade_authority.json -v -u mainnet-beta | grep "Balance" | sed 's/.* //g' | grep -oE "[0-9]*[\.][0-9]") \
 D #(spl-token account-info  So11111111111111111111111111111111111111112 ~/switchboard_environments_v2/devnet/upgrade_authority/upgrade_authority.json -v -u devnet | grep "Balance" | sed 's/.* //g' | grep -oE "[0-9]*[\.][0-9]")\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
-#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] Network: #(readlink ~/switchboard_accounts | awk -F/ '{print \$NF}')\
+#[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] Network: #(readlink ~/switchboard_accounts_v2 | awk -F/ '{print \$NF}')\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
 #[fg=$TM_RIGHT_TXT,bg=$TM_RIGHT_BG,bold] #(date +'%a %b %e, %l:%M %p' | sed 's/  / /g')\
 #[fg=$TM_RIGHT_SEP,bg=$TM_RIGHT_BG,bold] \
